...
    <string name="squeeze_lemon_content_description">Squeeze Lemon</string>
    <string name="glass_of_lemonade_content_description">Glass of lemonade</string>
    <string name="empty_glass_content_description">Empty glass</string>
    <string name="welcome_to_the_united_states_olutoba_text">Hi Damola Onikoyi, Welcome to the United States Of America in the year 2026</string>
    <string name="us_embassy_visa_office_text">US Embassy Visa Office</string>
    <string name="calculate_tip_title">Calculate Tip</string>
    <string name="bill_amount_text">Bill Amount</string>
    <string name="tip_percentage_text">Tip Percentage</string>
    <string name="tip_amount_text">Tip Amount: %s</string>
    <string name="please_enter_a_valid_amount_text">Please enter a valid amount</string>
    <string name="dollar_icon_content_desc">Dollar Icon</string>
    <string name="percentage_icon_content_desc">Percentage Icon</string>
    <string name="round_up_tip_text">Round up tip?</string>
    <string name="golden_gate_bridge_content_desc">Golden gate bridge image</string>
...
