package com.dev.olutoba.xplorejetcompose.utils

/**
 * Created by Onikoyi Damola Olutoba
 * DATE: 22 August, 2025
 * EMAIL: damexxey94@gmail.com
 */

object Constants {
    const val BASE_URL = "https://github.com/Olutobz"
    const val FAKE_AUTH_URL = "https://google.com/fakeAuth"
    const val CONNECT_TIMEOUT = 15L
    const val READ_TIMEOUT = 15L
    const val DEFAULT_AMOUNT = 0.0
    const val ROUND_UP_SWITCH = "ROUND_UP_SWITCH"
}